k8s/efk/logstash-pv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logstash
